force-app/main/default/objects/Account/fields/Account_CheckBox__c.field-meta.xml
<CustomField>
    <fullName>Account_CheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account_CheckBox</label>
    <type>Checkbox</type>
</CustomField>