force-app/main/default/objects/Account/fields/Account_MayText__c.field-meta.xml
<CustomField>
    <fullName>Account_MayText__c</fullName>
    <label>Account_MayText</label>
    <length>10</length>
    <type>Text</type>
</CustomField>