force-app/main/default/objects/Account/fields/AccountPhoneJune__c.field-meta.xml
<CustomField>
    <fullName>AccountPhoneJune__c</fullName>
    <label>AccountPhoneJune</label>
    <type>Phone</type>
</CustomField>