force-app/main/default/objects/Account/fields/New_account_date__c.field-meta.xml
<CustomField>
    <fullName>New_account_date__c</fullName>
    <label>New account date</label>
    <type>Date</type>
</CustomField>